--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,5 @@ services:
         image: postgres:9
         ports:
           - 5432:5432
+        environment:
+          - POSTGRES_PASSWORD=postgres
