--- a/udemy-reviews-fraud/pom.xml
+++ b/udemy-reviews-fraud/pom.xml
@@ -35,6 +35,12 @@
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
             <version>${kafka.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>javax.ws.rs</groupId>
+                    <artifactId>javax.ws.rs-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -56,11 +62,6 @@
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro</artifactId>
-            <version>${avro.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.avro</groupId>
-            <artifactId>avro-maven-plugin</artifactId>
             <version>${avro.version}</version>
         </dependency>
 
@@ -96,6 +97,12 @@
             <groupId>com.github.simplesteph.kafka.producer</groupId>
             <artifactId>udemy-reviews-producer</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.apache.avro</groupId>
+                    <artifactId>avro-maven-plugin</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
     </dependencies>
